Update github link and open external links on new tab

--- a/index.html
+++ b/index.html
@@ -442,12 +442,12 @@ and how they are represented on each media delivery or in a telecommunication se
                 <tr>
                   <td><a href ="https://github.com/eark-project/erms-export-ui-module">ERMS Export Module<a/></td>
                   <td>The ERMS Export Module is a tool which allows for the controlled and selective export of records and their metadata from any CMIS 1.0 compliant records or content management system.</td>
-                  <td><a href="https://www.magenta.dk">Magenta</td>
+                  <td><a href="https://www.magenta.dk" target="_blank">Magenta</td>
                 </tr>
                 <tr>
-                  <td><a href="http://www.database-preservation.com/">Database Preservation Toolkit</a></td>
+                  <td><a href="http://www.database-preservation.com/" target="_blank">Database Preservation Toolkit</a></td>
                   <td>The Database Preservation Toolkit allows conversion between Database formats, including connection to live systems, for purposes of digitally preserving databases. The toolkit allows conversion of live or backed-up databases into preservation formats such as SIARD  </td>
-                  <td><a href="https://www.keep.pt/">KEEPS</a></td>
+                  <td><a href="https://www.keep.pt/" target="_blank">KEEPS</a></td>
                 </tr>
               </tbody>
             </table>
@@ -609,7 +609,7 @@ and how they are represented on each media delivery or in a telecommunication se
 
         </div>
         <div class="col-md-4">
-          <center><a class="btn btn-social mx-1" href="http://etp.essarch.org/">
+          <center><a class="btn btn-social mx-1" href="https://github.com/essolutions/essarch/" target="_blank">
           <i class="fab fa-fw fa-github fa-3x" style="color:white;"></i>
         </a></center>
 
@@ -619,7 +619,7 @@ and how they are represented on each media delivery or in a telecommunication se
           <h4 class="text-uppercase mb-4">Contact</h4>
           <p class="lead mb-0">Björn Skog
             <br>bjorn(at)essolutions.se<br>
-            <a href="http://essolutions.se">ES Solutions</a>
+            <a href="http://essolutions.se" target="_blank">ES Solutions</a>
           </p>
         </div>
 
